--- a/people/index.html
+++ b/people/index.html
@@ -134,13 +134,13 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/nophoto.jpg' style="width:100%">
+            <img src='headshots/mark.jpg' style="width:100%">
         </div>
         <div class="seven columns">
             <p1><b>Mark Margres</b></p1><br />
             <p2>Hrdy Postdoctoral Fellow</p2>
-            <p></p>
-            <p3><i> mark_margres [at] fas.harvard.edu </i></p3>
+            <p>Mark's research addresses fundamental questions related to adaptation dynamics in two co-evolving systems: (1) Tasmanian devils and devil facial tumor disease, and (2) venomous snakes and their prey. Mark’s cancer work largely focuses on the genetic basis of adaptation in Tasmanian devils in response to devil facial tumor disease, a species-specific transmissible cancer that threatens the Tasmanian devil with extinction. His work on rattlesnake venoms explores how migration and selection interact to lead to local adaptation, particularly in island populations. Overall, Mark seeks to understand the relationship between genetic and phenotypic complexity and how this relationship can bias the process of adaptation.</p>
+            <p3><i> mark_margres [at] fas.harvard.edu </i> <a href="https://www.researchgate.net/profile/Mark_Margres">[website]</a></p3>
         </div>
     </div>
     <div class="row people_row">
