--- a/people/index.html
+++ b/people/index.html
@@ -117,7 +117,7 @@
         <div class="seven columns">
             <p1><b>Sudipta Tung</b></p1><br />
             <p2>Postdoctoral  Fellow</p2>
-            <p>Sudipta did his Ph.D. in Biological Sciences at IISER Pune, India, in Sutirth Dey’s lab, where he empirically studied several methods to stabilize extinction-prone populations and dispersal evolution using common fruitfly, Drosophila as a model organism. Sudipta is currently interested in understanding the impact of different factors influencing evolutionary dynamics in budding yeast, particularly in the context of spatially structured.</p>
+            <p>Sudipta did his Ph.D. in Biological Sciences at IISER Pune, India, in Sutirth Dey’s lab, where he empirically studied several methods to stabilize extinction-prone populations and dispersal evolution using Drosophila as a model organism. Sudipta is currently interested in understanding the impact of different factors influencing evolutionary dynamics in budding yeast, particularly in the context of spatially structured populations.</p>
             <p3><i>sudiptatung [at] fas.harvard.edu</i> <a href="https://sites.google.com/site/sudiptatung/">[website]</a></p3>
         </div>
     </div>    
