--- a/people/index.html
+++ b/people/index.html
@@ -79,12 +79,12 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/nophoto.jpg' style="width:100%">
+            <img src='headshots/melinda.jpg' style="width:100%">
         </div>
         <div class="seven columns">
             <p1><b>Melinda Peterson</b></p1><br />
             <p2>Administrative Assistant</p2>
-            <p>Melinda keeps the lab running.</p>
+            <p>Melinda keeps the lab running. You can find her at HUH 403, x68062</p>
             <p3><i>mpeterson [at] fas.harvard.edu</i></p3>
         </div>
     </div>
