--- a/people/index.html
+++ b/people/index.html
@@ -266,12 +266,12 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/nophoto.jpg' style="width:100%">
+            <img src='headshots/juhee.jpeg' style="width:100%">
         </div>
         <div class="seven columns">
             <p1><b>Juhee Goyal</b></p1><br />
             <p2>Undergraduate Researcher</p2>
-            <p></p>
+            <p>Juhee is a sophomore at Harvard College. She is interested in exploring various fields of Bioengineering as well as Organismic and Evolutionary Biology through a joint concentration. Since Spring 2019, she has been analyzing changes in budding yeast populations after thousands of generations of evolution.</p>
             <p3><i>juheegoyal [at] college.harvard.edu</a></p3>
         </div>
     </div>
