--- a/people/index.html
+++ b/people/index.html
@@ -90,17 +90,6 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/alex.jpg' style="width:100%">
-        </div>
-        <div class="seven columns">
-            <p1><b>Alex Nguyen-Ba</b></p1><br />
-            <p2>Postdoctoral  Fellow</p2>
-            <p>Alex got his B.Sc. in Biology at the University of Toronto, and did his Ph.D. in Alan Moses' lab at the University of Toronto. He is interested in developing high-resolution and high-throughput techniques to observe evolution in real time and answer fundamental questions in quantitative genetics.</p>
-            <p3><i>nnguyenba [at] fas.harvard.edu</i></p3>
-        </div>
-    </div>
-    <div class="row people_row">
-        <div class="two columns">
             <img src='headshots/aphillips_01_1.jpg' style="width:100%">
         </div>
         <div class="seven columns">
@@ -112,48 +101,26 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/sudipta.jpg' style="width:100%">
-        </div>
-        <div class="seven columns">
-            <p1><b>Sudipta Tung</b></p1><br />
-            <p2>Postdoctoral  Fellow</p2>
-            <p>Sudipta did his Ph.D. in Biological Sciences at IISER Pune, India, in Sutirth Dey’s lab, where he empirically studied several methods to stabilize extinction-prone populations and dispersal evolution using Drosophila as a model organism. Sudipta is currently interested in understanding the impact of different factors influencing evolutionary dynamics in budding yeast, particularly in the context of spatially structured populations.</p>
-            <p3><i>sudiptatung [at] fas.harvard.edu</i> <a href="https://sites.google.com/site/sudiptatung/">[website]</a></p3>
-        </div>
-    </div>    
-    <div class="row people_row">
-        <div class="two columns">
             <img src='headshots/nophoto.jpg' style="width:100%">
         </div>
         <div class="seven columns">
             <p1><b>Thomas Dupic</b></p1><br />
-            <p2>Postdoctoral Fellow</p2>
+            <p2>HFSP Postdoctoral Fellow</p2>
             <p></p>
             <p3><i> [at] </i></p3>
         </div>
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/mark.jpg' style="width:100%">
+            <img src='headshots/nophoto.jpg' style="width:100%">
         </div>
         <div class="seven columns">
-            <p1><b>Mark Margres</b></p1><br />
-            <p2>Hrdy Postdoctoral Fellow</p2>
-            <p>Mark's research addresses fundamental questions related to adaptation dynamics in two co-evolving systems: (1) Tasmanian devils and devil facial tumor disease, and (2) venomous snakes and their prey. Mark’s cancer work focuses on the genetic basis of adaptation in Tasmanian devils in response to devil facial tumor disease, a species-specific transmissible cancer. His work on rattlesnake venoms explores how migration and selection interact to lead to local adaptation. Overall, Mark seeks to understand the relationship between genetic and phenotypic complexity and how this relationship can bias the process of adaptation.</p>
-            <p3><i> mark_margres [at] fas.harvard.edu </i> <a href="https://www.researchgate.net/profile/Mark_Margres">[website]</a></p3>
+            <p1><b>Gautam Reddy</b></p1><br />
+            <p2>NSF-Simons Postdoctoral Fellow</p2>
+            <p></p>
+            <p3><i> [at] </i></p3>
         </div>
     </div>
-    <div class="row people_row">
-        <div class="two columns">
-            <img src='headshots/mm_photo.jpg' style="width:100%">
-        </div>
-        <div class="seven columns">
-            <p1><b>Matthew Melissa</b></p1><br />
-            <p2>Graduate Student in Physics</p2>
-            <p>Matthew received his B.S. in Engineering Physics from UC Berkeley in 2014. He joined the Desai Lab in October 2015, and is interested in using yeast surface display to characterize antibody-antigen binding affinities.</p>
-            <p3><i>mjmel [at] fas.harvard.edu</i></p3>
-        </div>
-    </div>   
     <div class="row people_row">
         <div class="two columns">
             <img src='headshots/milo.jpg' style="width:100%">
@@ -206,7 +173,7 @@
             <p1><b>Shreyas Gopalkrishna</b></p1><br />
             <p2>Graduate Student in Molecules, Cells, and Organisms</p2>
             <p></p>
-            <p3><i>gopalakr.shreyas [at] gmail.com</a></p3>
+            <p3><i>gopalakr.shreyas [at] gmail.com</i></p3>
         </div>
     </div>
     <div class="row people_row">
@@ -217,7 +184,7 @@
             <p1><b>Alief Moulana</b></p1><br />
             <p2>Graduate Student in Organismic and Evolutionary Biology</p2>
             <p></p>
-            <p3><i>amoulana [at] g.harvard.edu</a></p3>
+            <p3><i>amoulana [at] g.harvard.edu</i></p3>
         </div>
     </div>
     <div class="row people_row">
@@ -228,7 +195,7 @@
             <p1><b>Tanush Jagdish</b></p1><br />
             <p2>Graduate Student in Systems, Synthetic, and Quantitative Biology</p2>
             <p></p>
-            <p3><i>tanush [at] g.harvard.edu</a></p3>
+            <p3><i>tanush [at] g.harvard.edu</i></p3>
         </div>
     </div>
     <div class="row people_row">
@@ -239,7 +206,7 @@
             <p1><b>Jiseon Min</b></p1><br />
             <p2>Graduate Student in Molecules, Cells, and Organisms</p2>
             <p>Jiseon is broadly interested in developing mathematical models on living systems motivated by probability theory and statistical physics. She received her B.S. in Physics from Caltech in 2018 and joined the Desai lab in 2019. She is currently interested in understanding genetic diversity and temporal dynamics in different regimes.</p>
-            <p3><i>jiseonmin [at] g.harvard.edu</a></p3>
+            <p3><i>jiseonmin [at] g.harvard.edu</i></p3>
         </div>
     </div>
     <div class="row people_row">
@@ -247,26 +214,32 @@
             <img src='headshots/nophoto.jpg' style="width:100%">
         </div>
         <div class="seven columns">
-            <p1><b>Divvya Ramesh</b></p1><br />
-            <p2>Undergraduate Intern</p2>
+            <p1><b>Eliot Fenton</b></p1><br />
+            <p2>Graduate Student in Physics</p2>
             <p></p>
-            <p3><i>dramesh [at] fas.harvard.edu</a></p3>
+            <p3><i>eliotfenton [at] g.harvard.edu</i></p3>
         </div>
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/juhee.jpeg' style="width:100%">
+            <img src='headshots/nophoto.jpg' style="width:100%">
         </div>
         <div class="seven columns">
-            <p1><b>Juhee Goyal</b></p1><br />
-            <p2>Undergraduate Researcher</p2>
-            <p>Juhee is a sophomore at Harvard College. She is interested in exploring various fields of Bioengineering as well as Organismic and Evolutionary Biology through a joint concentration. Since Spring 2019, she has been analyzing changes in budding yeast populations after thousands of generations of evolution.</p>
-            <p3><i>juheegoyal [at] college.harvard.edu</a></p3>
+            <p1><b>Misha Gupta</b></p1><br />
+            <p2>Graduate Student in Organismic and Evolutionary Biology</p2>
+            <p></p>
+            <p3><i>mishagupta [at] g.harvard.edu</i></p3>
         </div>
     </div>
 
     <div class="alumni">
         <p><strong><u>Lab Alumni</u><p></strong>
+        <p><strong><a href="https://annb-lab.github.io/">Alex N. Nguyen Ba</strong></a><br />
+        Assistant Professor, University of Toronto.</p>
+        <p><strong><a href="https://www.margreslab.com/">Mark Margres</strong></a><br />
+        Assistant Professor, University of South Florida.</p>
+        <p><strong><a href="https://sites.google.com/site/sudiptatung/">Sudipta Tung</strong></a><br />
+        DBT/Wellcome Trust India Alliance Early Career Fellow, Department of Biology, Ashoka University, India.</p>
         <p><strong><a href="https://www.mcdonald-lab.com">Michael J. McDonald</strong></a><br />
         Assistant Professor, Monash University.</p>
         <p><strong><a href="http://sklab.science">Sergey Kryazhimskiy</strong></a><br />
@@ -279,6 +252,8 @@
         Lecturer (Assistant Professor), Cambridge University.</p>
         <p><strong><a href="https://sites.google.com/view/ivanacvijovic/home">Ivana Cvijovic</strong></a><br />
         Lewis-Sigler Fellow, Princeton University.</p>
+        <p><strong>Matthew Melissa</strong><br />
+        Data Scientist, Google.</p>
         <p><strong>Ramya Purkanti</strong><br />
         Postdoc, Vastenhouw lab, Max-Planck Institute of Molecular Cell Biology and Genetics.</p>
         <p><strong><a href="http://www.laurenatphysics.com/p/about.html">Lauren Nicolaisen</strong></a><br />
@@ -299,8 +274,10 @@
         Graduate Student, UC Berkeley.</p>
         <p><strong>Ian Ochs</strong></a><br />
         Graduate Student, Princeton University.</p>
+        <p><strong>Juhee Goyal</strong></a><br />
+        Undergraduate, Harvard College.</p>
         <p><strong>Julian Kates-Harbeck</strong></a><br />
-        </p>
+        Team Lead, AI, Kernel.</p>
         <p><strong>Parris Humphrey</strong></a><br />
         Bioinformatics Scientist, Myriad Genetics</p>
         
