--- a/people/index.html
+++ b/people/index.html
@@ -107,7 +107,7 @@
             <p1><b>Thomas Dupic</b></p1><br />
             <p2>HFSP Postdoctoral Fellow</p2>
             <p></p>
-            <p3><i> [at] </i></p3>
+            <p3><i>dupic.thomas [at] gmail.com</i></p3>
         </div>
     </div>
     <div class="row people_row">
@@ -118,7 +118,7 @@
             <p1><b>Gautam Reddy</b></p1><br />
             <p2>NSF-Simons Postdoctoral Fellow</p2>
             <p></p>
-            <p3><i> [at] </i></p3>
+            <p3><i>gautam_nallamala [at] fas.harvard.edu</i></p3>
         </div>
     </div>
     <div class="row people_row">
