--- a/publications/index.html
+++ b/publications/index.html
@@ -64,7 +64,8 @@
         <div class="twelve column" style="margin-top: 5%">
             <h4>Publications</h4>
             <ul id="publication_list">
-                <li><strong>Kates-Harbeck, J.</strong>, M. A. Nowak, and <strong>M. M. Desai</strong>. Social network structure and the spread of complex contagions. <em>In review</em>. 
+                <li><strong>Tung, S.</strong>, <strong>C. W. Bakerlee</strong>, <strong>A. M. Phillips</strong>, <strong>A. N. Nguyen Ba</strong>, and <strong>M. M. Desai</strong>. The Genetic Basis of Differential Autodiploidization in Evolving Yeast Populations. <em>In review</em>. 
+                <li><strong>Kates-Harbeck, J.</strong>, M. A. Nowak, and <strong>M. M. Desai</strong>. Social network structure and the spread of complex contagions. <em>In revision</em>. 
                 <li><strong>Rice, D. R.</strong>, J. Novembre<sup>&#8224</sup>, and <strong>M. M. Desai<sup>&#8224</sup></strong>. Distinguishing Multiple-Merger From Kingman Coalescence Using Two-site Frequency Spectra. <em>In revision</em>. 
                 <li><strong>Reddy, G.</strong>, and <strong>M. M. Desai</strong>. Global epistasis emerges from a generic model of a complex trait. <em>eLife, in press</em>. 
                 <li><strong>Johnson, M. S.</strong>, <strong>S. Gopalkrishnan</strong>, <strong>J. Gohal</strong>, <strong>M. E. Dillingham</strong>, <strong>C. W. Bakerlee</strong>, <strong>P. T. Humphrey</strong>, <strong>T. Jagdish</strong>, <strong>E. R. Jerison</strong>, <strong>K. Kosheleva</strong>, <strong>K. R. Lawrence</strong>, <strong>J. Min</strong>, <strong>A. Moulana</strong>, <strong>A. M. Phillips</strong>, <strong>J. C. Piper</strong>, <strong>R. Purkanti</strong>, <strong>A. Rego-Costa</strong>, <strong>M. J. McDonald</strong>, <strong>A. N. Nguyen Ba</strong>, and <strong>M. M. Desai</strong>. Phenotypic and molecular evolution across 10,000 generations in laboratory budding yeast populations. <em>eLife</em> 10:e63910 (2021).  
