--- a/publications/index.html
+++ b/publications/index.html
@@ -64,6 +64,7 @@
         <div class="twelve column" style="margin-top: 5%">
             <h4>Publications</h4>
             <ul id="publication_list">
+                <li><strong>Melissa, M. J.</strong>, <strong>B. H. Good</strong>, D. S. Fisher, and <strong>M. M. Desai</strong>. Population genetics of polymorphism and divergence in rapidly evolving populations. <em>In review</em>.
                 <li><strong>Bakerlee, C. W.*</strong>, <strong>A. M. Phillips*</strong>, <strong>Nguyen Ba, A. N.</strong>, and <strong>M. M. Desai</strong>. Dynamics and variability in the pleiotropic effects of adaptation in laboratory budding yeast populations. <em>In review</em>.
                 <li><strong>Phillips, A. M.*</strong>, <strong>K. R. Lawrence*</strong>, <strong>A. Moulana</strong>, <strong>T. Dupic</strong>, <strong>J. Chang</strong>, <strong>M. S. Johnson</strong>, <strong>I. Cvijovic</strong>, T. Mora, A. M. Walczak, and <strong>M. M. Desai</strong>. Binding affinity landscapes constrain the evolution of broadly neutralizing anti-influenza antibodies. <em>In review</em>.
                 <li><strong>Nguyen Ba, A. N.*</strong>, <strong>K. R. Lawrence*</strong>, <strong>A. Rego-Costa*</strong>, <strong>S. Gopalakrishnan</strong>, and <strong>M. M. Desai</strong>. Barcoded Bulk QTL mapping reveals functional architecture of complex traits in yeast. <em>In revision</em>.    
