--- a/people/index.html
+++ b/people/index.html
@@ -90,12 +90,13 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/aphillips_01_1.jpg' style="width:100%">
+            <img src='headshots/angela.jpg' style="width:100%">
         </div>
         <div class="seven columns">
             <p1><b>Angela Phillips</b></p1><br />
             <p2>HHMI Hannah Gray Postdoctoral Fellow</p2>
-            <p>Angela joined the Desai lab as a postdoctoral fellow in June 2018. She earned her Ph.D. in Biological Chemistry at MIT in Matthew Shouldersâ€™s lab, where she applied chemical biology tools to profile the impact of host protein-folding factors on viral protein evolution. Angela is interested in the defining factors of fitness landscapes, particularly in the context of pathogen evolution.</p>
+            <p>Angela joined the Desai lab as a postdoctoral fellow in June 2018. She earned her Ph.D. in Biological Chemistry at MIT in Matthew Shoulders’s lab, where she applied chemical biology tools to profile the impact of host protein-folding factors on viral protein evolution. In the Desai lab, Angela is developing methods to map antibody sequence-affinity landscapes and continues to be interested in the molecular constraints underlying host-pathogen evolution.</p>
+            <p><i>Photo credit: Scott Eisen/HHMI</i></p>
             <p3><i>aphillips [at] fas.harvard.edu</i></p3>
         </div>
     </div>
@@ -222,13 +223,24 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/nophoto.jpg' style="width:100%">
+            <img src='headshots/misha.jpeg' style="width:100%">
         </div>
         <div class="seven columns">
             <p1><b>Misha Gupta</b></p1><br />
             <p2>Graduate Student in Organismic and Evolutionary Biology</p2>
             <p></p>
             <p3><i>mishagupta [at] g.harvard.edu</i></p3>
+        </div>
+    </div>
+    <div class="row people_row">
+        <div class="two columns">
+            <img src='headshots/jeffrey.jpg' style="width:100%">
+        </div>
+        <div class="seven columns">
+            <p1><b>Jeffrey Chang</b></p1><br />
+            <p2>Graduate Student in Physics</p2>
+            <p></p>
+            <p3><i>jeffrey_chang [at] g.harvard.edu</i></p3>
         </div>
     </div>
 
