More people update
Thomas, Shreyas, Alief, Eliot, Jack; move Katherine, Milo, Chris to
alumni.

--- a/people/index.html
+++ b/people/index.html
@@ -95,19 +95,19 @@
         <div class="seven columns">
             <p1><b>Angela Phillips</b></p1><br />
             <p2>HHMI Hannah Gray Postdoctoral Fellow</p2>
-            <p>Angela joined the Desai lab as a postdoctoral fellow in June 2018. She earned her Ph.D. in Biological Chemistry at MIT in Matthew Shoulders’s lab, where she applied chemical biology tools to profile the impact of host protein-folding factors on viral protein evolution. In the Desai lab, Angela is developing methods to map antibody sequence-affinity landscapes and continues to be interested in the molecular constraints underlying host-pathogen evolution.</p>
+            <p>Angela joined the Desai lab as a postdoctoral fellow in June 2018. She earned her Ph.D. in Biological Chemistry at MIT in Matthew Shoulders&apos;s lab, where she applied chemical biology tools to profile the impact of host protein-folding factors on viral protein evolution. In the Desai lab, Angela is developing methods to map antibody sequence-affinity landscapes and continues to be interested in the molecular constraints underlying host-pathogen evolution.</p>
             <p><i>Photo credit: Scott Eisen/HHMI</i></p>
             <p3><i>aphillips [at] fas.harvard.edu</i></p3>
         </div>
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/nophoto.jpg' style="width:100%">
+            <img src='headshots/thomas.png' style="width:100%">
         </div>
         <div class="seven columns">
             <p1><b>Thomas Dupic</b></p1><br />
             <p2>HFSP Postdoctoral Fellow</p2>
-            <p></p>
+            <p>Thomas joined the Desai Lab in January 2020. He earned his Ph.D. at UPMC in Paris in theoretical physics then worked on computational immunology with Aleksandra Walczak and Thierry Mora. In the Desai Lab, Thomas is working on mapping the affinity landscape of in-vivo antibodies against various antigens and on understanding the theoretical basis for B-cells evolution.</p>
             <p3><i>dupic.thomas [at] gmail.com</i></p3>
         </div>
     </div>
@@ -124,39 +124,6 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/milo.jpg' style="width:100%">
-        </div>
-        <div class="seven columns">
-            <p1><b>Milo Johnson</b></p1><br />
-            <p2>Graduate Student in Organismic and Evolutionary Biology</p2>
-            <p>Milo received his B.A. from Dartmouth College in 2014. He joined the Desai lab in 2015 and is using experimental evolution in budding yeast to characterize the pleiotropic effects of adaptive mutations across diverse environmental conditions.</p>
-            <p3><i>milo.s.johnson.13 [at] gmail.com</i></p3>
-        </div>
-    </div>    
-    <div class="row people_row">
-        <div class="two columns">
-            <img src='headshots/baker.jpg' style="width:100%">
-        </div>
-        <div class="seven columns">
-            <p1><b>Christopher Bakerlee</b></p1><br />
-            <p2>Graduate Student in Molecules, Cells, and Organisms</p2>
-            <p>Chris received an A.B. in Biology from Brown University in 2012. He joined the Desai lab in 2016, and he is using budding yeast to understand epistasis and the evolutionary dynamics of "selfish genetic elements" (e.g., retrotransposons).</p>
-            <p3><i>baker03 [at] g.harvard.edu</i></p3>
-        </div>
-    </div>
-    <div class="row people_row">
-        <div class="two columns">
-            <img src='headshots/katherine.jpg' style="width:100%">
-        </div>
-        <div class="seven columns">
-            <p1><b>Katherine Lawrence</b></p1><br />
-            <p2>Graduate Student in Physics (MIT)</p2>
-            <p>Katherine received her B.S. in Physics from Yale University in 2014, and she joined the Desai lab in 2017. She is interested in high-resolution high-throughput experimental methods to characterize fitness landscapes, including mapping quantitative traits in diverse wild yeast crosses and measuring the binding affinity trajectories of influenza antibodies.</p>
-            <p3><i>klawrenc [at] mit.edu</i></p3>
-        </div>
-    </div>
-    <div class="row people_row">
-        <div class="two columns">
             <img src='headshots/artur.jpg' style="width:100%">
         </div>
         <div class="seven columns">
@@ -168,23 +135,23 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/nophoto.jpg' style="width:100%">
+            <img src='headshots/shreyas.jpg' style="width:100%">
         </div>
         <div class="seven columns">
-            <p1><b>Shreyas Gopalkrishna</b></p1><br />
+            <p1><b>Shreyas Gopalakrishnan</b></p1><br />
             <p2>Graduate Student in Molecules, Cells, and Organisms</p2>
-            <p></p>
-            <p3><i>gopalakr.shreyas [at] gmail.com</i></p3>
+            <p>Shreyas received his B. Sc. in biology from the Indian Institute of Science (IISc) in 2018, and he joined the lab in 2019. He is using QTL mapping in budding yeast to understand the statistical structure of pleiotropy. He is also using long-term experimental evolution in different yeast species to quantify genetic parallelism across species.</p>
+            <p3><i>sgopalakrishnan [at] g.harvard.edu</i></p3>
         </div>
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/nophoto.jpg' style="width:100%">
+            <img src='headshots/alief.jpg' style="width:100%">
         </div>
         <div class="seven columns">
             <p1><b>Alief Moulana</b></p1><br />
             <p2>Graduate Student in Organismic and Evolutionary Biology</p2>
-            <p></p>
+            <p>Alief earned his BA in maths and biology from Carleton College and joined the lab in 2019. He is studying how repetitive exposure to COVID-19 and flu vaccinations affects the binding affinity and the recognition breadth of B cell receptors within a repertoire.</p>
             <p3><i>amoulana [at] g.harvard.edu</i></p3>
         </div>
     </div>
@@ -212,12 +179,12 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/nophoto.jpg' style="width:100%">
+            <img src='headshots/eliot.jpg' style="width:100%">
         </div>
         <div class="seven columns">
             <p1><b>Eliot Fenton</b></p1><br />
             <p2>Graduate Student in Physics</p2>
-            <p></p>
+            <p>Eliot received his B.S. in Physics from the University of Maryland, College Park in 2018 and joined the lab in 2019. He uses a mix of experimental and computational techniques to study how factors such as sexual reproduction and gene networks impact the speed and trajectory of evolution.</p>
             <p3><i>eliotfenton [at] g.harvard.edu</i></p3>
         </div>
     </div>
@@ -243,9 +210,24 @@
             <p3><i>jeffrey_chang [at] g.harvard.edu</i></p3>
         </div>
     </div>
+    <div class="row people_row">
+        <div class="two columns">
+            <img src='headshots/nophoto.jpg' style="width:100%">
+        </div>
+        <div class="seven columns">
+            <p1><b>Jack Edwards</b></p1><br />
+            <p2>Graduate Student in Organismic and Evolutionary Biology</p2>
+            <p></p>
+            <p3><i>jedwards1 [at] fas.harvard.edu</i></p3>
+        </div>
+    </div>
 
     <div class="alumni">
-        <p><strong><u>Lab Alumni</u><p></strong>
+        <!-- <p><strong><u>Lab Alumni</u><p></strong> -->
+        <h3>Lab Alumni</h3>
+        <p><strong>Katherine Lawrence</strong><br /></p>
+        <p><strong><a href="https://www.miloswebsite.com/">Milo Johnson</strong></a><br /></p>
+        <p><strong><a href="https://www.linkedin.com/in/chrisbakerlee/">Chris Bakerlee</strong></a><br />Biosecurity.</p>
         <p><strong><a href="https://annb-lab.github.io/">Alex N. Nguyen Ba</strong></a><br />
         Assistant Professor, University of Toronto.</p>
         <p><strong><a href="https://www.margreslab.com/">Mark Margres</strong></a><br />
