People: update Milo position and Jack photo

--- a/people/index.html
+++ b/people/index.html
@@ -212,7 +212,7 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/nophoto.jpg' style="width:100%">
+            <img src='headshots/jack.jpg' style="width:100%">
         </div>
         <div class="seven columns">
             <p1><b>Jack Edwards</b></p1><br />
@@ -226,7 +226,8 @@
         <!-- <p><strong><u>Lab Alumni</u><p></strong> -->
         <h3>Lab Alumni</h3>
         <p><strong>Katherine Lawrence</strong><br /></p>
-        <p><strong><a href="https://www.miloswebsite.com/">Milo Johnson</strong></a><br /></p>
+        <p><strong><a href="https://www.miloswebsite.com/">Milo Johnson</strong></a><br />
+        Postdoc, Koskella lab, UC Berkeley.</p>
         <p><strong><a href="https://www.linkedin.com/in/chrisbakerlee/">Chris Bakerlee</strong></a><br />Biosecurity.</p>
         <p><strong><a href="https://annb-lab.github.io/">Alex N. Nguyen Ba</strong></a><br />
         Assistant Professor, University of Toronto.</p>
