--- a/people/index.html
+++ b/people/index.html
@@ -94,7 +94,7 @@
         </div>
         <div class="seven columns">
             <p1><b>Angela Phillips</b></p1><br />
-            <p2>HHMI Hannah Gray Postdoctoral Fellow</p2>
+            <p2>HHMI Hannah Gray Postdoctoral Fellow. Starting her own <a href="http://aphillipslab.ucsf.edu">lab</a> shortly!</p2>
             <p>Angela joined the Desai lab as a postdoctoral fellow in June 2018. She earned her Ph.D. in Biological Chemistry at MIT in Matthew Shoulders’s lab, where she applied chemical biology tools to profile the impact of host protein-folding factors on viral protein evolution. Angela is interested in the defining factors of fitness landscapes, particularly in the context of pathogen evolution.</p>
             <p3><i>aphillips [at] fas.harvard.edu</i></p3>
         </div>
