--- a/people/index.html
+++ b/people/index.html
@@ -90,17 +90,6 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/angela.jpg' style="width:100%">
-        </div>
-        <div class="seven columns">
-            <p1><b>Angela Phillips</b></p1><br />
-            <p2>HHMI Hannah Gray Postdoctoral Fellow. Starting her own <a href="http://aphillipslab.ucsf.edu">lab</a> shortly!</p2>
-            <p>Angela joined the Desai lab as a postdoctoral fellow in June 2018. She earned her Ph.D. in Biological Chemistry at MIT in Matthew Shoulders’s lab, where she applied chemical biology tools to profile the impact of host protein-folding factors on viral protein evolution. Angela is interested in the defining factors of fitness landscapes, particularly in the context of pathogen evolution.</p>
-            <p3><i>aphillips [at] fas.harvard.edu</i></p3>
-        </div>
-    </div>
-    <div class="row people_row">
-        <div class="two columns">
             <img src='headshots/thomas.png' style="width:100%">
         </div>
         <div class="seven columns">
@@ -224,6 +213,8 @@
     <div class="alumni">
         <!-- <p><strong><u>Lab Alumni</u><p></strong> -->
         <h3>Lab Alumni</h3>
+        <p><strong><a href="https://aphillipslab.ucsf.edu/">Angela Phillips</strong></a><br />
+        Assistant Professor, University of California, San Francisco.</p>
         <p><strong>Katherine Lawrence</strong><br /></p>
         <p><strong><a href="https://www.miloswebsite.com/">Milo Johnson</strong></a><br />
         Postdoc, Koskella lab, UC Berkeley.</p>
