--- a/people/index.html
+++ b/people/index.html
@@ -150,19 +150,8 @@
         <div class="seven columns">
             <p1><b>Tanush Jagdish</b></p1><br />
             <p2>Graduate Student in Systems, Synthetic, and Quantitative Biology</p2>
-            <p></p>
+            <p>Tanush joined the lab in 2019. He is currently working to apply molecular barcoding methods to the E. coli Long-term evolution experiment.</p>
             <p3><i>tanush [at] g.harvard.edu</i></p3>
-        </div>
-    </div>
-    <div class="row people_row">
-        <div class="two columns">
-            <img src='headshots/jiseon.jpg' style="width:100%">
-        </div>
-        <div class="seven columns">
-            <p1><b>Jiseon Min</b></p1><br />
-            <p2>Graduate Student in Molecules, Cells, and Organisms</p2>
-            <p>Jiseon is broadly interested in developing mathematical models on living systems motivated by probability theory and statistical physics. She received her B.S. in Physics from Caltech in 2018 and joined the Desai lab in 2019. She is currently interested in understanding genetic diversity and temporal dynamics in different regimes.</p>
-            <p3><i>jiseonmin [at] g.harvard.edu</i></p3>
         </div>
     </div>
     <div class="row people_row">
@@ -183,7 +172,7 @@
         <div class="seven columns">
             <p1><b>Misha Gupta</b></p1><br />
             <p2>Graduate Student in Organismic and Evolutionary Biology</p2>
-            <p></p>
+            <p>Misha joined the lab in 2020. She is developing quantitative genetics methods for trait mapping in budding yeast, and conducting experimental evolution to understand the role of spatial structure in promoting adaptation in inhomogeneous environments</p>
             <p3><i>mishagupta [at] g.harvard.edu</i></p3>
         </div>
     </div>
@@ -194,7 +183,7 @@
         <div class="seven columns">
             <p1><b>Jeffrey Chang</b></p1><br />
             <p2>Graduate Student in Physics</p2>
-            <p></p>
+            <p>Jeffrey joined the lab in 2021. He is interested in understanding the structure and statistics of protein-protein interaction landscapes.</p>
             <p3><i>jeffrey_chang [at] g.harvard.edu</i></p3>
         </div>
     </div>
@@ -205,7 +194,18 @@
         <div class="seven columns">
             <p1><b>Jack Edwards</b></p1><br />
             <p2>Graduate Student in Organismic and Evolutionary Biology</p2>
-            <p></p>
+            <p>Jack joined the lab in 2021. He is working on molecular barcoding methods in the E. coli long-term evolution experiment, and is also broadly interested in evolutionary theory.</p>
+            <p3><i>jedwards1 [at] fas.harvard.edu</i></p3>
+        </div>
+    </div>
+    <div class="row people_row">
+        <div class="two columns">
+            <img src='headshots/nophoto.jpg' style="width:100%">
+        </div>
+        <div class="seven columns">
+            <p1><b>Berk Alpay</b></p1><br />
+            <p2>Graduate Student in Systems, Synthetic, and Quantitative Biology</p2>
+            <p>Berk joined the lab in 2022. He is working to understand evolutionary dynamics in the immune system using a combination of in vitro directed evolution and random mutagenesis to analyze the landscapes of antibody binding affinities.</p>
             <p3><i>jedwards1 [at] fas.harvard.edu</i></p3>
         </div>
     </div>
@@ -215,7 +215,12 @@
         <h3>Lab Alumni</h3>
         <p><strong><a href="https://aphillipslab.ucsf.edu/">Angela Phillips</strong></a><br />
         Assistant Professor, University of California, San Francisco.</p>
-        <p><strong>Katherine Lawrence</strong><br /></p>
+        <p><strong>Jiseon Min</strong><br />
+        Postdoc, Kern Lab, University of Oregon</p>
+        <p><strong>Katherine Lawrence</strong><br />
+        Scientist, Oxford Nanopore</p>
+        <p><strong><a href="https://www.miloswebsite.com/">Milo Johnson</strong></a><br />
+        Postdoc, Koskella lab, UC Berkeley.</p>
         <p><strong><a href="https://www.miloswebsite.com/">Milo Johnson</strong></a><br />
         Postdoc, Koskella lab, UC Berkeley.</p>
         <p><strong><a href="https://www.linkedin.com/in/chrisbakerlee/">Chris Bakerlee</strong></a><br />Biosecurity.</p>
