--- a/contact/index.html
+++ b/contact/index.html
@@ -63,7 +63,7 @@
     <div class="row">
         <div class="twelve column" style="margin-top: 5%">
             <h2>Contact</h2>
-            <p1>Michael Desai<br />FAS Center for Systems Biology<br />457.20 Northwest Labs<br />52 Oxford Street<br />Cambridge, MA 02138<br /><i>mdesai[at]oeb.harvard.edu</i><br /><br />Phone (Office):  617-496-3613<br />Phone (Lab):  617-496-3385<br /><br />Administrative Assistant:  Jenn Thomson<br />457.10 Northwest Labs<br />52 Oxford Street<br />Cambridge, MA 02138<br /><i>jthomson[at]oeb.harvard.edu</i><br /><br />Phone (Office): 617-495-2419</p1>
+            <p1>Michael Desai<br />FAS Center for Systems Biology<br />457.20 Northwest Labs<br />52 Oxford Street<br />Cambridge, MA 02138<br /><i>mdesai[at]oeb.harvard.edu</i><br /><br />Phone (Office):  617-496-3613<br />Phone (Lab):  617-496-3385<br /><br />Administrative Assistant:  Melinda Peterson<br />457.10 Northwest Labs<br />52 Oxford Street<br />Cambridge, MA 02138<br /><i>mpeterson[at]fas.harvard.edu</i><br /><br />Phone (Office): 617-495-2419</p1>
         </div>
     </div>
 </div>
