--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -52,7 +52,6 @@
             <a href="../people">People</a>
             <a href="../opportunities"  class="active"><u>Opportunities</u></a>
             <a href="../contact">Contact</a>
-            <a href="../internal">Internal</a>
             <a href="javascript:void(0);" class="icon" onclick="menu_change()">
                 <i class="fa fa-bars"></i>
             </a>
@@ -74,7 +73,7 @@
         </div>
         <div class="twelve columns opps">
             <h4>Postdocs:</h4>
-            <p2>We are not actively looking for postdocs at the moment. However, if you are potentially interested in a postdoc position in theoretical evolutionary dynamics, theoretical population genetics, and experimental evolution (or, ideally, some combination of these) please email Michael Desai. Include a CV and a brief summary of your research interests and experience.</p2>
+            <p2>We are currently looking for postdocs in evolutionary dynamics and population genetics, with a particular emphasis on the structure and statistics of genotype-phenotype maps and on evolution in the immune system. Theory, computational, and experimental backgrounds (or some combination of these) are all welcome. We are particularly interested in recruiting postdocs with backgrounds in molecular genetics and/or biochemistry. If you are potentially interested, please email Michael Desai. Include a CV and a brief summary of your research interests and experience.</p2>
         </div>
         <div class="twelve columns opps">
             <h4>Undergraduate Students:</h4>
