--- a/people/index.html
+++ b/people/index.html
@@ -144,7 +144,7 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/nophoto.jpg' style="width:100%">
+            <img src='headshots/tanush.jpeg' style="width:100%">
         </div>
         <div class="seven columns">
             <p1><b>Tanush Jagdish</b></p1><br />
@@ -199,7 +199,7 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/nophoto.jpg' style="width:100%">
+            <img src='headshots/berk.jpeg' style="width:100%">
         </div>
         <div class="seven columns">
             <p1><b>Berk Alpay</b></p1><br />
