--- a/people/index.html
+++ b/people/index.html
@@ -205,7 +205,7 @@
             <p1><b>Berk Alpay</b></p1><br />
             <p2>Graduate Student in Systems, Synthetic, and Quantitative Biology</p2>
             <p>Berk joined the lab in 2022. He is working to understand evolutionary dynamics in the immune system using a combination of in vitro directed evolution and random mutagenesis to analyze the landscapes of antibody binding affinities.</p>
-            <p3><i>jedwards1 [at] fas.harvard.edu</i></p3>
+            <p3><i>berk_alpay [at] g.harvard.edu</i> <a href="http://berkalpay.com">[website]</a></p3>
         </div>
     </div>
 
