--- a/people/index.html
+++ b/people/index.html
@@ -100,7 +100,7 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/nophoto.jpg' style="width:100%">
+            <img src='headshots/gautam.jpeg' style="width:100%">
         </div>
         <div class="seven columns">
             <p1><b>Gautam Reddy</b></p1><br />
